[tool.poetry]
name = "bass"
version = "0.1.0"
description = ""
authors = ["diesys"]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.2"
flask = "^1.1.2"
colorthief = "^0.2.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
